# eleparser

./: .gitignore  Cargo.toml
src/: bins.rs  comparison.rs  datebin.rs  lib.rs  main.rs  parser.rs  plotter.rs  priceclient.rs  record.rs
src/record/: fingrid.rs  oomi.rs
