[package]
name = "eleparser"
version = "0.1.0"
edition = "2021"

[lib]
name = "eleparserlib"
path = "src/lib.rs"

[[bin]]
name = "eleparser"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
chrono-tz = { version = "0.4", features = ["serde"] }
chrono-intervals = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
statrs = "0.16"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12.0"
plotters = "0.3.5"
